Add buffer class and VMA lib to the project

--- a/libs/pinut/CMakeLists.txt
+++ b/libs/pinut/CMakeLists.txt
@@ -33,11 +33,11 @@ add_library(Pinut STATIC ${Pinut_core} ${Pinut_renderer})
 
 add_subdirectory(external/glfw)
 add_subdirectory(external/vkbootstrap)
+add_subdirectory(external/vma)
 
 # add_subdirectory(external/glm)
 # add_subdirectory(external/stb)
-# add_subdirectory(external/vma)
-target_link_libraries(Pinut PUBLIC GLFW VKBOOTSTRAP ${Vulkan_LIBRARY})
+target_link_libraries(Pinut PUBLIC GLFW VKBOOTSTRAP VMA ${Vulkan_LIBRARY})
 
 # target_link_libraries(Pinut PUBLIC GLFW GLM STB VMA VKBOOTSTRAP ${Vulkan_LIBRARY})
 target_include_directories(Pinut PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${Vulkan_INCLUDE_DIR})
