--- a/libs/pinut/CMakeLists.txt
+++ b/libs/pinut/CMakeLists.txt
@@ -65,11 +65,12 @@ add_subdirectory(shaders)
 add_subdirectory(external/glfw)
 add_subdirectory(external/glm)
 add_subdirectory(external/imgui)
+add_subdirectory(external/tinygltf)
 add_subdirectory(external/tinyobjloader)
 add_subdirectory(external/vkbootstrap)
 add_subdirectory(external/vma)
 
 # add_subdirectory(external/stb)
-target_link_libraries(Pinut PUBLIC GLFW glm IMGUI TINYOBJ VKBOOTSTRAP VMA ${Vulkan_LIBRARY})
+target_link_libraries(Pinut PUBLIC GLFW glm IMGUI tinygltf TINYOBJ VKBOOTSTRAP VMA ${Vulkan_LIBRARY})
 target_include_directories(Pinut PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${Vulkan_INCLUDE_DIR})
 target_compile_features(Pinut PRIVATE cxx_std_20)
