Wireframe pipeline and debug wire sphere for pointlight

--- a/libs/pinut/CMakeLists.txt
+++ b/libs/pinut/CMakeLists.txt
@@ -52,6 +52,8 @@ set(Pinut_materials
     src/renderer/materials/opaqueMaterial.h
     src/renderer/materials/skyboxMaterial.cpp
     src/renderer/materials/skyboxMaterial.h
+    src/renderer/materials/wireframeMaterial.cpp
+    src/renderer/materials/wireframeMaterial.h
     src/renderer/materials/transparentMaterial.cpp
     src/renderer/materials/transparentMaterial.h)
 
