--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/pinut/external/tinygltf"]
 	path = libs/pinut/external/tinygltf
 	url = https://github.com/syoyo/tinygltf.git
+[submodule "libs/pinut/external/ImGuizmo"]
+	path = libs/pinut/external/ImGuizmo
+	url = https://github.com/CedricGuillemet/ImGuizmo.git
