--- a/libs/render_device/CMakeLists.txt
+++ b/libs/render_device/CMakeLists.txt
@@ -4,7 +4,7 @@ files_glob_recurse(source_files "src/*.cpp" "src/*.h" "src/pch.hpp")
 add_library(RenderDevice ${source_files})
 set_target_properties(RenderDevice PROPERTIES LINKER_LANGUAGE CXX)
 target_precompile_headers(RenderDevice PRIVATE src/pch.hpp)
-target_include_directories(RenderDevice PRIVATE . ${Vulkan_INCLUDE_DIR})
+target_include_directories(RenderDevice PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${Vulkan_INCLUDE_DIR})
 target_link_libraries(RenderDevice PUBLIC VMA ${Vulkan_LIBRARY})
 target_compile_features(RenderDevice PRIVATE cxx_std_20)
 
