--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "libs/pinut/external/tinyobjloader"]
 	path = libs/pinut/external/tinyobjloader
 	url = https://github.com/tinyobjloader/tinyobjloader.git
+[submodule "libs/pinut/external/entt"]
+	path = libs/pinut/external/entt
+	url = https://github.com/skypjack/entt.git
