--- a/libs/render_device/CMakeLists.txt
+++ b/libs/render_device/CMakeLists.txt
@@ -1,12 +1,19 @@
-files_glob_recurse(source_files "src/*.cpp" "include/*.h" "include/pch.hpp")
+files_glob_recurse(source_files "src/*.cpp" "include/*.h")
 
 # RenderDevice library
 add_library(RenderDevice ${source_files})
 set_target_properties(RenderDevice PROPERTIES LINKER_LANGUAGE CXX)
-target_precompile_headers(RenderDevice PRIVATE include/pch.hpp)
-target_include_directories(RenderDevice PUBLIC include PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/internal ${CMAKE_CURRENT_SOURCE_DIR}/external ${Vulkan_INCLUDE_DIR})
-target_link_libraries(RenderDevice PRIVATE VMA ${Vulkan_LIBRARY})
 target_compile_features(RenderDevice PRIVATE cxx_std_20)
+target_precompile_headers(RenderDevice PRIVATE pch.hpp)
+target_include_directories(RenderDevice 
+PUBLIC 
+    include 
+PRIVATE 
+    ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/internal ${Vulkan_INCLUDE_DIR})
+
+target_link_libraries(RenderDevice 
+PRIVATE 
+    common VMA ${Vulkan_LIBRARY})
 
 # VMA
 add_library(VMA INTERFACE)
