--- a/sandbox/CMakeLists.txt
+++ b/sandbox/CMakeLists.txt
@@ -1,7 +1,7 @@
-add_executable(Sandbox src/sandbox.cpp src/sandbox.h src/pch.hpp src/pch.cpp)
+add_executable(Sandbox src/sandbox.cpp src/sandbox.h)
 
-target_link_libraries(Sandbox PRIVATE Pinut ${Vulkan_LIBRARIES})
-target_include_directories(Sandbox PRIVATE ${Vulkan_INCLUDE_DIR})
-target_compile_features(Sandbox PRIVATE cxx_std_20)
-target_precompile_headers(Sandbox PRIVATE src/pch.hpp)
 set_target_properties(Sandbox PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_HOME_DIRECTORY}/bin" DEBUG_POSTFIX "d")
+target_compile_features(Sandbox PRIVATE cxx_std_20)
+target_precompile_headers(Sandbox PRIVATE pch.hpp)
+target_link_libraries(Sandbox PRIVATE Pinut ${Vulkan_LIBRARIES})
+target_include_directories(Sandbox PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${Vulkan_INCLUDE_DIR})
