--- a/libs/common/CMakeLists.txt
+++ b/libs/common/CMakeLists.txt
@@ -2,9 +2,18 @@ files_glob_recurse(source_files "src/*.cpp" "include/*.h")
 
 # Common library
 add_library(common ${source_files})
-set_target_properties(common PROPERTIES LINKER_LANGUAGE CXX)
-target_compile_features(common PRIVATE cxx_std_20)
-target_precompile_headers(common PRIVATE pch.hpp)
+set_target_properties(common
+    PROPERTIES
+    LINKER_LANGUAGE CXX
+    COMPILE_WARNING_AS_ERROR ON)
+
+target_compile_features(common
+    PRIVATE
+    cxx_std_20)
+
+target_precompile_headers(common
+    PRIVATE
+    pch.hpp)
 
 target_include_directories(common
     PUBLIC
