--- a/libs/common/CMakeLists.txt
+++ b/libs/common/CMakeLists.txt
@@ -1,7 +1,8 @@
 files_glob_recurse(source_files "src/*.cpp" "include/*.h")
 
-# Common library
+# common library
 add_library(common ${source_files})
+
 set_target_properties(common
     PROPERTIES
     LINKER_LANGUAGE CXX
@@ -20,3 +21,7 @@ target_include_directories(common
     ${CMAKE_CURRENT_SOURCE_DIR}/include
     PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR})
+
+target_link_libraries(common
+    PRIVATE
+    glm)
